# rust_lambda_cdk

./: Cargo.toml  package-lock.json  package.json
