[package]
name = "rust_lambda_cdk"
version = "0.1.0"
authors = ["Yorinton <ka2ki.yori@outlook.com>"]
edition = "2018"
readme = "README.md"

[lib]
name = "lib"
path = "src/lib.rs"

[[bin]]
name = "bootstrap"
path = "src/bin/bootstrap.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda = { package = "netlify_lambda", version = "0.2.0" }
tokio = "1.6.2"
serde = "1.0.126"
serde_derive = "1.0.126"
serde_json = "1.0.64"
pretty_assertions = "0.7.2"